# serializer version: 1
# name: test_snapshot_fetch_exchange[JP-CB-JP-HR]
  list([
    dict({
      'datetime': datetime.datetime(2026, 10, 7, 0, 5, tzinfo=zoneinfo.ZoneInfo(key='Asia/Tokyo')),
      'end_datetime': None,
      'netFlow': -318.0,
      'sortedZoneKeys': 'JP-CB->JP-HR',
      'source': 'occtonet.occto.or.jp',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2026, 10, 7, 0, 10, tzinfo=zoneinfo.ZoneInfo(key='Asia/Tokyo')),
      'end_datetime': None,
      'netFlow': -222.0,
      'sortedZoneKeys': 'JP-CB->JP-HR',
      'source': 'occtonet.occto.or.jp',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2026, 10, 7, 0, 15, tzinfo=zoneinfo.ZoneInfo(key='Asia/Tokyo')),
      'end_datetime': None,
      'netFlow': -378.0,
      'sortedZoneKeys': 'JP-CB->JP-HR',
      'source': 'occtonet.occto.or.jp',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2026, 10, 7, 0, 20, tzinfo=zoneinfo.ZoneInfo(key='Asia/Tokyo')),
      'end_datetime': None,
      'netFlow': -414.0,
      'sortedZoneKeys': 'JP-CB->JP-HR',
      'source': 'occtonet.occto.or.jp',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2026, 10, 7, 0, 25, tzinfo=zoneinfo.ZoneInfo(key='Asia/Tokyo')),
      'end_datetime': None,
      'netFlow': -474.0,
      'sortedZoneKeys': 'JP-CB->JP-HR',
      'source': 'occtonet.occto.or.jp',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2026, 10, 7, 0, 30, tzinfo=zoneinfo.ZoneInfo(key='Asia/Tokyo')),
      'end_datetime': None,
      'netFlow': -523.0,
      'sortedZoneKeys': 'JP-CB->JP-HR',
      'source': 'occtonet.occto.or.jp',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2026, 10, 8, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Tokyo')),
      'end_datetime': None,
      'netFlow': -390.0,
      'sortedZoneKeys': 'JP-CB->JP-HR',
      'source': 'occtonet.occto.or.jp',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
  ])
# ---
# name: test_snapshot_fetch_exchange[JP-CG-JP-KY]
  list([
    dict({
      'datetime': datetime.datetime(2026, 10, 7, 0, 5, tzinfo=zoneinfo.ZoneInfo(key='Asia/Tokyo')),
      'end_datetime': None,
      'netFlow': -272.0,
      'sortedZoneKeys': 'JP-CG->JP-KY',
      'source': 'occtonet.occto.or.jp',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2026, 10, 7, 0, 10, tzinfo=zoneinfo.ZoneInfo(key='Asia/Tokyo')),
      'end_datetime': None,
      'netFlow': -200.0,
      'sortedZoneKeys': 'JP-CG->JP-KY',
      'source': 'occtonet.occto.or.jp',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2026, 10, 7, 0, 15, tzinfo=zoneinfo.ZoneInfo(key='Asia/Tokyo')),
      'end_datetime': None,
      'netFlow': -416.0,
      'sortedZoneKeys': 'JP-CG->JP-KY',
      'source': 'occtonet.occto.or.jp',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2026, 10, 7, 0, 20, tzinfo=zoneinfo.ZoneInfo(key='Asia/Tokyo')),
      'end_datetime': None,
      'netFlow': -408.0,
      'sortedZoneKeys': 'JP-CG->JP-KY',
      'source': 'occtonet.occto.or.jp',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2026, 10, 7, 0, 25, tzinfo=zoneinfo.ZoneInfo(key='Asia/Tokyo')),
      'end_datetime': None,
      'netFlow': -500.0,
      'sortedZoneKeys': 'JP-CG->JP-KY',
      'source': 'occtonet.occto.or.jp',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2026, 10, 7, 0, 30, tzinfo=zoneinfo.ZoneInfo(key='Asia/Tokyo')),
      'end_datetime': None,
      'netFlow': -416.0,
      'sortedZoneKeys': 'JP-CG->JP-KY',
      'source': 'occtonet.occto.or.jp',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2026, 10, 8, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Tokyo')),
      'end_datetime': None,
      'netFlow': -260.0,
      'sortedZoneKeys': 'JP-CG->JP-KY',
      'source': 'occtonet.occto.or.jp',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
  ])
# ---
# name: test_snapshot_fetch_exchange[JP-TK-JP-CB]
  list([
    dict({
      'datetime': datetime.datetime(2026, 10, 7, 0, 5, tzinfo=zoneinfo.ZoneInfo(key='Asia/Tokyo')),
      'end_datetime': None,
      'netFlow': -461.0,
      'sortedZoneKeys': 'JP-CB->JP-TK',
      'source': 'occtonet.occto.or.jp',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2026, 10, 7, 0, 10, tzinfo=zoneinfo.ZoneInfo(key='Asia/Tokyo')),
      'end_datetime': None,
      'netFlow': -504.0,
      'sortedZoneKeys': 'JP-CB->JP-TK',
      'source': 'occtonet.occto.or.jp',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2026, 10, 7, 0, 15, tzinfo=zoneinfo.ZoneInfo(key='Asia/Tokyo')),
      'end_datetime': None,
      'netFlow': -522.0,
      'sortedZoneKeys': 'JP-CB->JP-TK',
      'source': 'occtonet.occto.or.jp',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2026, 10, 7, 0, 20, tzinfo=zoneinfo.ZoneInfo(key='Asia/Tokyo')),
      'end_datetime': None,
      'netFlow': -560.0,
      'sortedZoneKeys': 'JP-CB->JP-TK',
      'source': 'occtonet.occto.or.jp',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2026, 10, 7, 0, 25, tzinfo=zoneinfo.ZoneInfo(key='Asia/Tokyo')),
      'end_datetime': None,
      'netFlow': -559.0,
      'sortedZoneKeys': 'JP-CB->JP-TK',
      'source': 'occtonet.occto.or.jp',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2026, 10, 7, 0, 30, tzinfo=zoneinfo.ZoneInfo(key='Asia/Tokyo')),
      'end_datetime': None,
      'netFlow': -559.0,
      'sortedZoneKeys': 'JP-CB->JP-TK',
      'source': 'occtonet.occto.or.jp',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2026, 10, 8, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Tokyo')),
      'end_datetime': None,
      'netFlow': -760.0,
      'sortedZoneKeys': 'JP-CB->JP-TK',
      'source': 'occtonet.occto.or.jp',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
  ])
# ---
# name: test_snapshot_fetch_exchange_forecast
  list([
    dict({
      'datetime': datetime.datetime(2026, 10, 7, 0, 5, tzinfo=zoneinfo.ZoneInfo(key='Asia/Tokyo')),
      'end_datetime': None,
      'netFlow': -272.0,
      'sortedZoneKeys': 'JP-CG->JP-KY',
      'source': 'occtonet.occto.or.jp',
      'sourceType': <EventSourceType.forecasted: 'forecasted'>,
    }),
    dict({
      'datetime': datetime.datetime(2026, 10, 7, 0, 10, tzinfo=zoneinfo.ZoneInfo(key='Asia/Tokyo')),
      'end_datetime': None,
      'netFlow': -200.0,
      'sortedZoneKeys': 'JP-CG->JP-KY',
      'source': 'occtonet.occto.or.jp',
      'sourceType': <EventSourceType.forecasted: 'forecasted'>,
    }),
    dict({
      'datetime': datetime.datetime(2026, 10, 7, 0, 15, tzinfo=zoneinfo.ZoneInfo(key='Asia/Tokyo')),
      'end_datetime': None,
      'netFlow': -416.0,
      'sortedZoneKeys': 'JP-CG->JP-KY',
      'source': 'occtonet.occto.or.jp',
      'sourceType': <EventSourceType.forecasted: 'forecasted'>,
    }),
    dict({
      'datetime': datetime.datetime(2026, 10, 7, 0, 20, tzinfo=zoneinfo.ZoneInfo(key='Asia/Tokyo')),
      'end_datetime': None,
      'netFlow': -408.0,
      'sortedZoneKeys': 'JP-CG->JP-KY',
      'source': 'occtonet.occto.or.jp',
      'sourceType': <EventSourceType.forecasted: 'forecasted'>,
    }),
    dict({
      'datetime': datetime.datetime(2026, 10, 7, 0, 25, tzinfo=zoneinfo.ZoneInfo(key='Asia/Tokyo')),
      'end_datetime': None,
      'netFlow': -500.0,
      'sortedZoneKeys': 'JP-CG->JP-KY',
      'source': 'occtonet.occto.or.jp',
      'sourceType': <EventSourceType.forecasted: 'forecasted'>,
    }),
    dict({
      'datetime': datetime.datetime(2026, 10, 7, 0, 30, tzinfo=zoneinfo.ZoneInfo(key='Asia/Tokyo')),
      'end_datetime': None,
      'netFlow': -416.0,
      'sortedZoneKeys': 'JP-CG->JP-KY',
      'source': 'occtonet.occto.or.jp',
      'sourceType': <EventSourceType.forecasted: 'forecasted'>,
    }),
    dict({
      'datetime': datetime.datetime(2026, 10, 8, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Tokyo')),
      'end_datetime': None,
      'netFlow': -260.0,
      'sortedZoneKeys': 'JP-CG->JP-KY',
      'source': 'occtonet.occto.or.jp',
      'sourceType': <EventSourceType.forecasted: 'forecasted'>,
    }),
  ])
# ---
